force-app/main/default/objects/opportunityproductAmountcalculation__c/opportunityproductAmountcalculation__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Amount Calculation</label>
    <nameField>
        <label>OPAC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Amount Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>