force-app/main/default/objects/opportunityproductAmountcalculation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product Amount Calculations</relationshipLabel>
    <relationshipName>Opportunity_Product_Amount_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>